# vforth83

./: CMakeLists.txt  IMPLEMENTED.md  Makefile  README.md  builtins.c  builtins.h  dos.c  dos.h  errors.c  errors.h  forth.c  forth.h  input_stream.c  input_stream.h  io.c  io.h  mass_storage.c  mass_storage.h  memory.c  memory.h  stack.c  stack.h  system.f  system.fs  util.c  util.h
sampo/: EDITOR.BLK  SAMPOGEN.BLK  sampo.fs
tests/: core.fr  fst83_12.fs  fst83_13.fs  fst83_16.fs  fst83_b.fs  fst83chk.fs  tester.fr
